# ensamble_learning

./: 01_voting_classife.ipynb  02_baggin_and_pasting_clasification.ipynb  02_bagging_and_pasting_regression.ipynb  README.md  ensembles.ipynb  pyproject.toml
boosting/: classification.ipynb  classification_lightgbm.ipynb  hyperparameter_tuning.ipynb  regression_catboost.ipynb
boosting/catboost_info/: catboost_training.json  experiment.cbsnapshot  learn_error.tsv  test_error.tsv  time_left.tsv
boosting/catboost_info/learn/: events.out.tfevents
boosting/catboost_info/test/: events.out.tfevents
datasets/: bank_data_processed_2.csv  simple.csv
