[project]
name = "ensamble-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "drawdata>=0.3.9",
    "fastparquet>=2025.12.0",
    "jupyterlab>=4.5.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]
